##
## autogenerated ChangeLog -- don't edit
##

2008-10-14 Tuesday 20:56  Rocky Bernstein <rocky@gnu.org>

	* NEWS: What's up

2008-10-14 Tuesday 17:30  Rocky Bernstein <rocky@gnu.org>

	* configure.ac: Require GNU Emacs 22 or better

2008-10-14 Tuesday 14:28  Rocky Bernstein <rocky@gnu.org>

	* dbg-pre.sh, test/data/restart.cmd, test/data/restart.right,
	  test/integration/test-lopts, test/integration/test-restart:
	  Reinstate restart test. Clean up test-lopts a little bit more.

2008-10-14 Tuesday 02:06  Rocky Bernstein <rocky@gnu.org>

	* dbg-opts.sh: print -> echo'

2008-10-14 Tuesday 01:56  Rocky Bernstein <rocky@gnu.org>

	* dbg-opts.sh: Usage typo

2008-10-14 Tuesday 01:44  Rocky Bernstein <rocky@gnu.org>

	* dbg-opts.sh: Another export for subshell/eval

2008-10-14 Tuesday 01:16  Rocky Bernstein <rocky@gnu.org>

	* bashdb.in, dbg-main.sh.in, dbg-opts.sh, command/restart.sh,
	  lib/file.sh, lib/hook.sh: Sync up with zshdb.

2008-10-14 Tuesday 00:45  Rocky Bernstein <rocky@gnu.org>

	* bashdb.in, dbg-opts.sh, lib/hook.sh, lib/sig.sh,
	  test/data/brkpt2.right, test/data/bug-source.right,
	  test/data/lopts.right, test/data/sig.right,
	  test/data/sopts.right, test/data/tbreak.right,
	  test/data/watch1.right, test/integration/lopts.tests,
	  test/integration/test-lopts, test/integration/test-sopts,
	  test/integration/test-watch1: Make --command -c work. Fix up
	  options tests.

2008-10-13 Monday 14:09  Rocky Bernstein <rocky@gnu.org>

	* test/integration/test-lopts: Split out options processing tests

2008-10-13 Monday 01:45  Rocky Bernstein <rocky@gnu.org>

	* Makefile.am, dbg-main.sh.in, lib/processor.sh,
	  test/data/sig.right: Remove duplicate stdin reading code. Add
	  getopt_long to distribution.

2008-10-03 Friday 15:24  Rocky Bernstein <rocky@gnu.org>

	* bashdb-trace.in, bashdb.in, dbg-opts.sh, test/data/brkpt2.right,
	  test/data/bug-source.right, test/data/lopts.right,
	  test/data/sig.right, test/data/sopts.right,