@@ -36,7 +36,11 @@ _Dbg_do_restart() {
     typeset exec_cmd="$_Dbg_orig_0 $script_args";
     if (( _Dbg_script )) ; then
 	[ -z "$BASH" ] && BASH='bash'
-	local bash_opt=''
+        typeset bash_opt=''
+        case  $orig_0 in
+        bashdb | */bashdb )
+            bash_opt='--debugger ' ;;
+        esac
 	[[ $orig_0 =~ (.*/|^)bashdb$ ]] && bash_opt='--debugger '
 	if [[ $_Dbg_frame_last_filename == $_Dbg_bogus_file ]] ; then
 	    script_args="${bash_opt}-c \"$_Dbg_EXECUTION_STRING\""
