@@ -2,6 +2,10 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2008-10-16 Thursday 00:29  Rocky Bernstein <rocky@gnu.org>
+
+	* configure.ac, doc/bashdb.texi: Update bashdb texi
+
 2008-10-14 Tuesday 20:56  Rocky Bernstein <rocky@gnu.org>
 
 	* NEWS: What's up
